--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-.wow {
-  width: 100px;
+body::before{
+  display:block;
+  content: '';
+  height: 60px;
+}
+
+@media(min-width: 768px) {
+  .news-input {
+    width: 50%;
+  }
 }
